--- a/PersonalBlog.WebUI/Views/Shared/_Layout.cshtml
+++ b/PersonalBlog.WebUI/Views/Shared/_Layout.cshtml
@@ -62,7 +62,7 @@
                                 <div class="nav-links-item">
                                     @if (User.Identity.IsAuthenticated)
                                     {
-                                        <h1>@Html.ActionLink("Кабинет", "Manager", "BlogManager")</h1>
+                                        <h1>@Html.ActionLink("Кабинет", "Manager", "Cabinet")</h1>
                                     }
                                     <h1>@Html.ActionLink("Публикации", "list", "Post")</h1>
                                     <h1>@Html.ActionLink("Пользователи", "")</h1>
