--- a/PersonalBlog.WebUI/Views/Cabinet/BlogEdit.cshtml
+++ b/PersonalBlog.WebUI/Views/Cabinet/BlogEdit.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-@using (Html.BeginForm("BlogEdit", "BlogManager", FormMethod.Post, new { @enctype = "multipart/form-data" }))
+@using (Html.BeginForm("BlogEdit", "Cabinet", FormMethod.Post, new { @enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
@@ -13,7 +13,7 @@
     <div class="editor-field">
         @if (Model.ImageData != null)
         {
-        <img src="@Url.Action("GetImage", "BlogManager", new { Model.BlogId })" id="postEdit-img" />
+        <img src="@Url.Action("GetImage", "Cabinet", new { Model.BlogId })" id="postEdit-img" />
         }
         <div>
             <input type="file" name="Image" />
