--- a/PersonalBlog.WebUI/Views/Cabinet/PostEdit.cshtml
+++ b/PersonalBlog.WebUI/Views/Cabinet/PostEdit.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-@using (Html.BeginForm("PostEdit", "BlogManager", FormMethod.Post, new { @enctype = "multipart/form-data" }))
+@using (Html.BeginForm("PostEdit", "Cabinet", FormMethod.Post, new { @enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
     @Html.HiddenFor(model => model.PostId)
@@ -13,7 +13,7 @@
     <div class="editor-field">
         @if (Model.ImageData != null)
         {
-        <img src="@Url.Action("GetImagePost", "BlogManager", new { Model.PostId})" id="postEdit-img" />
+        <img src="@Url.Action("GetImagePost", "Cabinet", new { Model.PostId})" id="postEdit-img" />
         }
         <div>
             <input type="file" name="Image" />
